# ChangeLog for perl-core/digest-base
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/digest-base/ChangeLog,v 1.46 2011/05/02 19:20:42 grobian Exp $

  02 May 2011; Fabian Groffen <grobian@gentoo.org> digest-base-1.16.ebuild:
  Marked ~x64-freebsd

  17 Jan 2010; Torsten Veller <tove@gentoo.org> -digest-base-1.15.ebuild:
  Cleanup

  05 Jan 2010; nixnut <nixnut@gentoo.org> digest-base-1.16.ebuild:
  ppc stable #288026

  16 Dec 2009; Jonathan Callen <abcd@gentoo.org> digest-base-1.15.ebuild,
  digest-base-1.16.ebuild:
  QA: Transfer prefix keywords

  14 Dec 2009; Raúl Porcel <armin76@gentoo.org> digest-base-1.16.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #288026

  10 Dec 2009; Brent Baude <ranger@gentoo.org> digest-base-1.16.ebuild:
  Marking digest-base-1.16 ppc64 stable for bug 288026

  07 Dec 2009; Markus Meier <maekke@gentoo.org> digest-base-1.16.ebuild:
  arm stable, bug #288026

  07 Dec 2009; Jeroen Roovers <jer@gentoo.org> digest-base-1.16.ebuild:
  Stable for HPPA (bug #288026).

  04 Dec 2009; Torsten Veller <tove@gentoo.org> digest-base-1.16.ebuild:
  Stable on amd64 (#288026)

  04 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
  digest-base-1.16.ebuild:
  x86 stable, bug 288026

*digest-base-1.16 (10 Jun 2009)

  10 Jun 2009; Torsten Veller <tove@gentoo.org> +digest-base-1.16.ebuild:
  Version bump

  13 Mar 2009; Torsten Veller <tove@gentoo.org> -digest-base-1.13.ebuild:
  Cleanup

  22 Aug 2008; Alexis Ballier <aballier@gentoo.org> digest-base-1.15.ebuild:
  keyword ~sparc-fbsd

  22 Aug 2008; Alexis Ballier <aballier@gentoo.org> digest-base-1.15.ebuild:
  keyword ~x86-fbsd

  11 May 2007; Joshua Kinard <kumba@gentoo.org> digest-base-1.15.ebuild:
  Stable on mips.

  15 Apr 2007; Markus Rothe <corsair@gentoo.org> digest-base-1.15.ebuild:
  Stable on ppc64

  03 Mar 2007; Andrej Kacian <ticho@gentoo.org> digest-base-1.15.ebuild:
  Stable on x86, bug #169153.
