@@ -1,14 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST Digest-1.16.tar.gz 8262 RMD160 6f48499c5405c3e8db962a6c9224ad8fff3fc876 SHA1 0e0ff9e6ec19c9bba352a715b0dac587edb3163f SHA256 4bb708bfd666deba42993f93dcec4f81a9f9b52e6aa450fe5b764b53216dea33
-EBUILD digest-base-1.16.ebuild 762 RMD160 b9e0fbc1e554f87e4dfd54305e78ac461a666212 SHA1 9757c91582cb2ec1620d30d6a379a3dd63d60ba7 SHA256 3105f194237dba1971ade4560d2f9f26c773a03e716a60753222927e9ceec312
-MISC ChangeLog 7268 RMD160 531e6d1ee000ab992f59b7788b1bb5427941ea43 SHA1 5cc685333a6d8d16842b1ab4cee4c5bf03035696 SHA256 e92b83a285d789e8c6b5062346ab8cc5b4e2a8628e6bb9c3c7c2d6827e09e30a
+EBUILD digest-base-1.160.0.ebuild 740 RMD160 c98819c780b88b493d289930715878db19247e29 SHA1 96f130849079ab79aa12944d99b5682b2f3687d8 SHA256 1979c437b544bb72fb31c88098c655bd4f451a1ce912705ad6504bfbdd0a8930
+MISC ChangeLog 7431 RMD160 a0b0043d0e89a865c650cfe117df8503c9558a07 SHA1 33d512dffdc2dca574b04f4d807d754dd620dc1a SHA256 a7edb4abae185ddb21e99702a7968809ed7dbe0601f9828923d381c697d702b5
 MISC metadata.xml 232 RMD160 496ab3c51cd1babc7d35c7b5338a736c145a48a6 SHA1 f95bf3bdcbc2e9a956c13c84b6567bbfee99fa06 SHA256 f230299e8efe8df5e89017b9be9deecc6ffe7d653cbbd22d0df98949b0dfc0b4
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (Darwin)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk2/BAkACgkQX3X2B8XHTon3XACfUL7djKOivMrTceqGIMVzeB7G
-kJkAn2diYyLqbInkLRxHDWcjXJumwbWW
-=kR/S
+iEYEAREIAAYFAk3T8C8ACgkQV3J2n04Eauwj3gCbB19LLMisIzduLkbOm8g/tyis
+jvcAn2+KWT1PQOydvztPN4q6nHp9Y6+V
+=0H5G
 -----END PGP SIGNATURE-----
