@@ -1,13 +1,12 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/digest-base/digest-base-1.16.ebuild,v 1.10 2011/05/02 19:20:42 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/digest-base/digest-base-1.160.0.ebuild,v 1.1 2011/05/18 16:13:29 tove Exp $
 
 EAPI=2
 
 MY_PN=Digest
-MY_P=${MY_PN}-${PV}
 MODULE_AUTHOR=GAAS
-S=${WORKDIR}/${MY_P}
+MODULE_VERSION=1.16
 inherit perl-module
 
 DESCRIPTION="Modules that calculate message digests"
