@@ -1,6 +1,12 @@
 # ChangeLog for perl-core/digest-base
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/digest-base/ChangeLog,v 1.46 2011/05/02 19:20:42 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/digest-base/ChangeLog,v 1.47 2011/05/18 16:13:29 tove Exp $
+
+*digest-base-1.160.0 (18 May 2011)
+
+  18 May 2011; Torsten Veller <tove@gentoo.org> -digest-base-1.16.ebuild,
+  +digest-base-1.160.0.ebuild:
+  Change version scheme
 
   02 May 2011; Fabian Groffen <grobian@gentoo.org> digest-base-1.16.ebuild:
   Marked ~x64-freebsd
